language/move-lang/tests/move_check/typing/type_variable_join_threaded_unpack_invalid.exp
error: 

    ┌── tests/move_check/typing/type_variable_join_threaded_unpack_invalid.move:34:9 ───
    │
 34 │         f1
    │         ^^ Invalid return expression
    ·
 32 │         let Box { f1, f2 }  = Container::get(&v);
    │             -------------- The type: integer
    ·
 30 │     fun t0(): bool {
    │               ---- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/type_variable_join_threaded_unpack_invalid.move:39:31 ───
    │
 39 │         let Box { f1, f2 }  = Container::get(&v);
    │                               ^^^^^^^^^^^^^^^^^^ 'drop' constraint not satisifed
    ·
 39 │         let Box { f1, f2 }  = Container::get(&v);
    │             -------------- The type '0x2::M::Box<0x2::M::R>' does not have the ability 'drop'
    ·
 39 │         let Box { f1, f2 }  = Container::get(&v);
    │             -------------- The type '0x2::M::Box<0x2::M::R>' can have the ability 'drop' but the type argument '0x2::M::R' does not have the required ability 'drop'
    ·
 10 │     public fun get<V: drop>(self: &T<V>): V {
    │                       ---- 'drop' constraint declared here
    │

